Changing template to DPTI theme

--- a/handtime-html/about.html
+++ b/handtime-html/about.html
@@ -8,12 +8,12 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <link rel="icon" href="images/fevicon/fevicon.png" type="image/gif" />
+  <link rel="icon" href="images/fevicon/fevicon.ico" type="image/gif" />
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>HandTime</title>
+  <title>DPTI</title>
 
 
   <!-- bootstrap core css -->
@@ -41,7 +41,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              HandTime
+              <img src="images/DREAMWORKS Logo.png" width="150" height="100">
             </span>
           </a>
 
@@ -92,22 +92,20 @@
         <div class="col-md-6">
           <div class="img_container">
             <div class="img-box b1">
-              <img src="images/a-1.jpg" alt="">
+              <img src="images/1.jpg" alt="">
             </div>
             <div class="img-box b2">
-              <img src="images/a-2.jpg" alt="">
+              <img src="images/2.jpg" alt="">
             </div>
           </div>
         </div>
         <div class="col-md-6">
           <div class="detail-box">
             <h2>
-              About Our Shop
+              About US
             </h2>
             <p>
-              There are many variations of passages of Lorem Ipsum
-              There are many variations of
-              passages of Lorem Ipsum
+              DREAMWORKS POWER AND TECHNOLOGIES, INC. was established and registered with Securities and Exchange Commission on August 6, 2014 under SEC Reg. No. CS201415201. We handle all aftermarket requirements of customer such as Parts, Controllers, Lubricants, Filters and all kinds of repair both on mechanical and electrical components of Generating sets, ATS, Switchgear & Master Controller.
             </p>
             <a href="">
               Read More
@@ -125,7 +123,7 @@
     <div class="container">
       <div class="info_logo">
         <h2>
-          HandTime
+          DREAMWORKS POWER AND TECHNOLOGIES, INC.
         </h2>
       </div>
       <div class="row">
@@ -173,60 +171,6 @@
         </div>
 
         <div class="col-md-3">
-          <div class="info_insta">
-            <h5>
-              Instagram
-            </h5>
-            <div class="insta_container">
-              <div class="row m-0">
-                <div class="col-4 px-0">
-                  <a href="">
-                    <div class="insta-box b-1">
-                      <img src="images/w1.png" alt="">
-                    </div>
-                  </a>
-                </div>
-                <div class="col-4 px-0">
-                  <a href="">
-                    <div class="insta-box b-1">
-                      <img src="images/w2.png" alt="">
-                    </div>
-                  </a>
-                </div>
-                <div class="col-4 px-0">
-                  <a href="">
-                    <div class="insta-box b-1">
-                      <img src="images/w3.png" alt="">
-                    </div>
-                  </a>
-                </div>
-                <div class="col-4 px-0">
-                  <a href="">
-                    <div class="insta-box b-1">
-                      <img src="images/w4.png" alt="">
-                    </div>
-                  </a>
-                </div>
-                <div class="col-4 px-0">
-                  <a href="">
-                    <div class="insta-box b-1">
-                      <img src="images/w5.png" alt="">
-                    </div>
-                  </a>
-                </div>
-                <div class="col-4 px-0">
-                  <a href="">
-                    <div class="insta-box b-1">
-                      <img src="images/w6.png" alt="">
-                    </div>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-3">
           <div class="info_form ">
             <h5>
               Newsletter
@@ -264,7 +208,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="">DREAMWORKS POWER AND TECHNOLOGIES, INC.</a>
       </p>
     </div>
   </section>
