--- a/handtime-html/product.html
+++ b/handtime-html/product.html
@@ -8,12 +8,12 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <link rel="icon" href="images/fevicon/fevicon.png" type="image/gif" />
+  <link rel="icon" href="images/fevicon/fevicon.ico" type="image/gif" />
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>HandTime</title>
+  <title>DPTI</title>
 
 
   <!-- bootstrap core css -->
@@ -41,7 +41,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              HandTime
+              <img src="images/DREAMWORKS Logo.png" width="150" height="100">
             </span>
           </a>
 
@@ -88,19 +88,19 @@
     <div class="container">
       <div class="product_heading">
         <h2>
-          Top Sale Watches
+          Top Sale Products
         </h2>
       </div>
       <div class="product_container">
         <div class="box">
           <div class="box-content">
             <div class="img-box">
-              <img src="images/w1.png" alt="">
+              <img src="images/poster.png" alt="">
             </div>
             <div class="detail-box">
               <div class="text">
                 <h6>
-                  Men's Watch
+                  Lorem Ipsum
                 </h6>
                 <h5>
                   <span>$</span> 300
@@ -129,12 +129,12 @@
         <div class="box">
           <div class="box-content">
             <div class="img-box">
-              <img src="images/w2.png" alt="">
+              <img src="images/poster.png" alt="">
             </div>
             <div class="detail-box">
               <div class="text">
                 <h6>
-                  Men's Watch
+                  Lorem Ipsum
                 </h6>
                 <h5>
                   <span>$</span> 300
@@ -163,12 +163,12 @@
         <div class="box">
           <div class="box-content">
             <div class="img-box">
-              <img src="images/w3.png" alt="">
+              <img src="images/poster.png" alt="">
             </div>
             <div class="detail-box">
               <div class="text">
                 <h6>
-                  Men's Watch
+                  Lorem Ipsum
                 </h6>
                 <h5>
                   <span>$</span> 300
@@ -207,19 +207,19 @@
     <div class="container">
       <div class="product_heading">
         <h2>
-          Feature Watches
+          Feature Items
         </h2>
       </div>
       <div class="product_container">
         <div class="box">
           <div class="box-content">
             <div class="img-box">
-              <img src="images/w4.png" alt="">
+              <img src="images/poster.png" alt="">
             </div>
             <div class="detail-box">
               <div class="text">
                 <h6>
-                  Men's Watch
+                  Lorem Ipsum
                 </h6>
                 <h5>
                   <span>$</span> 300
@@ -248,12 +248,12 @@
         <div class="box">
           <div class="box-content">
             <div class="img-box">
-              <img src="images/w5.png" alt="">
+              <img src="images/poster.png" alt="">
             </div>
             <div class="detail-box">
               <div class="text">
                 <h6>
-                  Men's Watch
+                  Lorem Ipsum
                 </h6>
                 <h5>
                   <span>$</span> 300
@@ -282,12 +282,12 @@
         <div class="box">
           <div class="box-content">
             <div class="img-box">
-              <img src="images/w6.png" alt="">
+              <img src="images/poster.png" alt="">
             </div>
             <div class="detail-box">
               <div class="text">
                 <h6>
-                  Men's Watch
+                  Lorem Ipsum
                 </h6>
                 <h5>
                   <span>$</span> 300
@@ -334,12 +334,12 @@
         <div class="box">
           <div class="box-content">
             <div class="img-box">
-              <img src="images/w7.png" alt="">
+              <img src="images/poster.png" alt="">
             </div>
             <div class="detail-box">
               <div class="text">
                 <h6>
-                  Men's Watch
+                  Lorem Ipsum
                 </h6>
                 <h5>
                   <span>$</span> 300
@@ -368,12 +368,12 @@
         <div class="box">
           <div class="box-content">
             <div class="img-box">
-              <img src="images/w8.png" alt="">
+              <img src="images/poster.png" alt="">
             </div>
             <div class="detail-box">
               <div class="text">
                 <h6>
-                  Men's Watch
+                  Lorem Ipsum
                 </h6>
                 <h5>
                   <span>$</span> 300
@@ -402,12 +402,12 @@
         <div class="box">
           <div class="box-content">
             <div class="img-box">
-              <img src="images/w9.png" alt="">
+              <img src="images/poster.png" alt="">
             </div>
             <div class="detail-box">
               <div class="text">
                 <h6>
-                  Men's Watch
+                  Lorem Ipsum
                 </h6>
                 <h5>
                   <span>$</span> 300
@@ -445,7 +445,7 @@
     <div class="container">
       <div class="info_logo">
         <h2>
-          HandTime
+          DREAMWORKS POWER AND TECHNOLOGIES, INC.Time
         </h2>
       </div>
       <div class="row">
@@ -492,60 +492,7 @@
           </div>
         </div>
 
-        <div class="col-md-3">
-          <div class="info_insta">
-            <h5>
-              Instagram
-            </h5>
-            <div class="insta_container">
-              <div class="row m-0">
-                <div class="col-4 px-0">
-                  <a href="">
-                    <div class="insta-box b-1">
-                      <img src="images/w1.png" alt="">
-                    </div>
-                  </a>
-                </div>
-                <div class="col-4 px-0">
-                  <a href="">
-                    <div class="insta-box b-1">
-                      <img src="images/w2.png" alt="">
-                    </div>
-                  </a>
-                </div>
-                <div class="col-4 px-0">
-                  <a href="">
-                    <div class="insta-box b-1">
-                      <img src="images/w3.png" alt="">
-                    </div>
-                  </a>
-                </div>
-                <div class="col-4 px-0">
-                  <a href="">
-                    <div class="insta-box b-1">
-                      <img src="images/w4.png" alt="">
-                    </div>
-                  </a>
-                </div>
-                <div class="col-4 px-0">
-                  <a href="">
-                    <div class="insta-box b-1">
-                      <img src="images/w5.png" alt="">
-                    </div>
-                  </a>
-                </div>
-                <div class="col-4 px-0">
-                  <a href="">
-                    <div class="insta-box b-1">
-                      <img src="images/w6.png" alt="">
-                    </div>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
+       
         <div class="col-md-3">
           <div class="info_form ">
             <h5>
@@ -584,7 +531,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="">DREAMWORKS POWER AND TECHNOLOGIES, INC.</a>
       </p>
     </div>
   </section>
