--- a/handtime-html/testimonial.html
+++ b/handtime-html/testimonial.html
@@ -8,12 +8,12 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <link rel="icon" href="images/fevicon/fevicon.png" type="image/gif" />
+  <link rel="icon" href="images/fevicon/fevicon.ico" type="image/gif" />
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>HandTime</title>
+  <title>DPTI</title>
 
 
   <!-- bootstrap core css -->
@@ -41,7 +41,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              HandTime
+              <img src="images/DREAMWORKS Logo.png" width="150" height="100">
             </span>
           </a>
 
@@ -209,12 +209,13 @@
   <!-- end client section -->
 
 
+  
   <!-- info section -->
   <section class="info_section layout_padding2">
     <div class="container">
       <div class="info_logo">
         <h2>
-          HandTime
+          DREAMWORKS POWER AND TECHNOLOGIES, INC.Time
         </h2>
       </div>
       <div class="row">
@@ -261,60 +262,7 @@
           </div>
         </div>
 
-        <div class="col-md-3">
-          <div class="info_insta">
-            <h5>
-              Instagram
-            </h5>
-            <div class="insta_container">
-              <div class="row m-0">
-                <div class="col-4 px-0">
-                  <a href="">
-                    <div class="insta-box b-1">
-                      <img src="images/w1.png" alt="">
-                    </div>
-                  </a>
-                </div>
-                <div class="col-4 px-0">
-                  <a href="">
-                    <div class="insta-box b-1">
-                      <img src="images/w2.png" alt="">
-                    </div>
-                  </a>
-                </div>
-                <div class="col-4 px-0">
-                  <a href="">
-                    <div class="insta-box b-1">
-                      <img src="images/w3.png" alt="">
-                    </div>
-                  </a>
-                </div>
-                <div class="col-4 px-0">
-                  <a href="">
-                    <div class="insta-box b-1">
-                      <img src="images/w4.png" alt="">
-                    </div>
-                  </a>
-                </div>
-                <div class="col-4 px-0">
-                  <a href="">
-                    <div class="insta-box b-1">
-                      <img src="images/w5.png" alt="">
-                    </div>
-                  </a>
-                </div>
-                <div class="col-4 px-0">
-                  <a href="">
-                    <div class="insta-box b-1">
-                      <img src="images/w6.png" alt="">
-                    </div>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
+       
         <div class="col-md-3">
           <div class="info_form ">
             <h5>
@@ -346,7 +294,7 @@
     </div>
   </section>
 
-  <!-- end info_section -->
+  <!-- End Info Section-->
 
   <!-- footer section -->
   <section class="footer_section">
