--- a/handtime-html/about.html
+++ b/handtime-html/about.html
@@ -123,7 +123,7 @@
     <div class="container">
       <div class="info_logo">
         <h2>
-          DREAMWORKS POWER AND TECHNOLOGIES, INC.
+          DREAMWORKS POWER AND TECHNOLOGIES, INC.Time
         </h2>
       </div>
       <div class="row">
@@ -138,7 +138,7 @@
                 <img src="images/location-white.png" width="18px" alt="">
               </div>
               <p>
-                Address
+                Unit N 4/F West Gate Tower, Investment Drive, Madrigal Business Park, Alabang, 1770 Muntinlupa City
               </p>
             </div>
             <div>
@@ -146,7 +146,7 @@
                 <img src="images/telephone-white.png" width="12px" alt="">
               </div>
               <p>
-                +01 1234567890
+                +63 02 8835 5272 Mobile: (0917) 687 7684 / (0917) 153 3536
               </p>
             </div>
             <div>
@@ -154,7 +154,7 @@
                 <img src="images/envelope-white.png" width="18px" alt="">
               </div>
               <p>
-                demo@gmail.com
+                inquiry@dreamworkspower.com or sales@dreamworkspower.com
               </p>
             </div>
           </div>
@@ -170,6 +170,7 @@
           </div>
         </div>
 
+       
         <div class="col-md-3">
           <div class="info_form ">
             <h5>
