--- a/handtime-html/index.html
+++ b/handtime-html/index.html
@@ -225,39 +225,9 @@
   <!-- service section -->
 
   <section class="service_section">
-    <div class="container-fluid">
+    <div class="container-fluid ">
       <div class="row">
-        <div class="col-md-6 col-lg-3">
-          <div class="box ">
-            <div class="img-box">
-              <img src="images/feature-1.png" alt="">
-            </div>
-            <div class="detail-box">
-              <h5>
-                Fast Delivery
-              </h5>
-              <p>
-                variations of passages of Lorem Ipsum available
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3">
-          <div class="box ">
-            <div class="img-box">
-              <img src="images/feature-2.png" alt="">
-            </div>
-            <div class="detail-box">
-              <h5>
-                Free Shiping
-              </h5>
-              <p>
-                variations of passages of Lorem Ipsum available
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3">
+        <div class="col-md-6 col-lg-3 ">
           <div class="box ">
             <div class="img-box">
               <img src="images/feature-3.png" alt="">
@@ -279,7 +249,7 @@
             </div>
             <div class="detail-box">
               <h5>
-                24x7 Customer support
+                24/7 Customer support
               </h5>
               <p>
                 variations of passages of Lorem Ipsum available
@@ -287,6 +257,37 @@
             </div>
           </div>
         </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="box ">
+            <div class="img-box">
+              <img src="images/6t.png" alt="">
+            </div>
+            <div class="detail-box">
+              <h5>
+                Smart Energy
+              </h5>
+              <p>
+                variations of passages of Lorem Ipsum available
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="box ">
+            <div class="img-box">
+              <img src="images/7t.png" alt="">
+            </div>
+            <div class="detail-box">
+              <h5>
+                Engineering Enterprise
+              </h5>
+              <p>
+                variations of passages of Lorem Ipsum available
+              </p>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
@@ -882,7 +883,7 @@
                 <img src="images/location-white.png" width="18px" alt="">
               </div>
               <p>
-                Address
+                Unit N 4/F West Gate Tower, Investment Drive, Madrigal Business Park, Alabang, 1770 Muntinlupa City
               </p>
             </div>
             <div>
@@ -890,7 +891,7 @@
                 <img src="images/telephone-white.png" width="12px" alt="">
               </div>
               <p>
-                +01 1234567890
+                +63 02 8835 5272 Mobile: (0917) 687 7684 / (0917) 153 3536
               </p>
             </div>
             <div>
@@ -898,7 +899,7 @@
                 <img src="images/envelope-white.png" width="18px" alt="">
               </div>
               <p>
-                demo@gmail.com
+                inquiry@dreamworkspower.com or sales@dreamworkspower.com
               </p>
             </div>
           </div>
