--- a/handtime-html/product.html
+++ b/handtime-html/product.html
@@ -460,7 +460,7 @@
                 <img src="images/location-white.png" width="18px" alt="">
               </div>
               <p>
-                Address
+                Unit N 4/F West Gate Tower, Investment Drive, Madrigal Business Park, Alabang, 1770 Muntinlupa City
               </p>
             </div>
             <div>
@@ -468,7 +468,7 @@
                 <img src="images/telephone-white.png" width="12px" alt="">
               </div>
               <p>
-                +01 1234567890
+                +63 02 8835 5272 Mobile: (0917) 687 7684 / (0917) 153 3536
               </p>
             </div>
             <div>
@@ -476,7 +476,7 @@
                 <img src="images/envelope-white.png" width="18px" alt="">
               </div>
               <p>
-                demo@gmail.com
+                inquiry@dreamworkspower.com or sales@dreamworkspower.com
               </p>
             </div>
           </div>
