--- a/handtime-html/testimonial.html
+++ b/handtime-html/testimonial.html
@@ -210,91 +210,91 @@
 
 
   
-  <!-- info section -->
-  <section class="info_section layout_padding2">
-    <div class="container">
-      <div class="info_logo">
-        <h2>
-          DREAMWORKS POWER AND TECHNOLOGIES, INC.Time
-        </h2>
-      </div>
-      <div class="row">
+ <!-- info section -->
+ <section class="info_section layout_padding2">
+  <div class="container">
+    <div class="info_logo">
+      <h2>
+        DREAMWORKS POWER AND TECHNOLOGIES, INC.Time
+      </h2>
+    </div>
+    <div class="row">
 
-        <div class="col-md-3">
-          <div class="info_contact">
-            <h5>
-              About Shop
-            </h5>
-            <div>
-              <div class="img-box">
-                <img src="images/location-white.png" width="18px" alt="">
-              </div>
-              <p>
-                Address
-              </p>
+      <div class="col-md-3">
+        <div class="info_contact">
+          <h5>
+            About Shop
+          </h5>
+          <div>
+            <div class="img-box">
+              <img src="images/location-white.png" width="18px" alt="">
             </div>
-            <div>
-              <div class="img-box">
-                <img src="images/telephone-white.png" width="12px" alt="">
-              </div>
-              <p>
-                +01 1234567890
-              </p>
-            </div>
-            <div>
-              <div class="img-box">
-                <img src="images/envelope-white.png" width="18px" alt="">
-              </div>
-              <p>
-                demo@gmail.com
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="info_info">
-            <h5>
-              Informations
-            </h5>
             <p>
-              ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+              Unit N 4/F West Gate Tower, Investment Drive, Madrigal Business Park, Alabang, 1770 Muntinlupa City
+            </p>
+          </div>
+          <div>
+            <div class="img-box">
+              <img src="images/telephone-white.png" width="12px" alt="">
+            </div>
+            <p>
+              +63 02 8835 5272 Mobile: (0917) 687 7684 / (0917) 153 3536
+            </p>
+          </div>
+          <div>
+            <div class="img-box">
+              <img src="images/envelope-white.png" width="18px" alt="">
+            </div>
+            <p>
+              inquiry@dreamworkspower.com or sales@dreamworkspower.com
             </p>
           </div>
         </div>
+      </div>
+      <div class="col-md-3">
+        <div class="info_info">
+          <h5>
+            Informations
+          </h5>
+          <p>
+            ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          </p>
+        </div>
+      </div>
 
-       
-        <div class="col-md-3">
-          <div class="info_form ">
-            <h5>
-              Newsletter
-            </h5>
-            <form action="">
-              <input type="email" placeholder="Enter your email">
-              <button>
-                Subscribe
-              </button>
-            </form>
-            <div class="social_box">
-              <a href="">
-                <img src="images/fb.png" alt="">
-              </a>
-              <a href="">
-                <img src="images/twitter.png" alt="">
-              </a>
-              <a href="">
-                <img src="images/linkedin.png" alt="">
-              </a>
-              <a href="">
-                <img src="images/youtube.png" alt="">
-              </a>
-            </div>
+     
+      <div class="col-md-3">
+        <div class="info_form ">
+          <h5>
+            Newsletter
+          </h5>
+          <form action="">
+            <input type="email" placeholder="Enter your email">
+            <button>
+              Subscribe
+            </button>
+          </form>
+          <div class="social_box">
+            <a href="">
+              <img src="images/fb.png" alt="">
+            </a>
+            <a href="">
+              <img src="images/twitter.png" alt="">
+            </a>
+            <a href="">
+              <img src="images/linkedin.png" alt="">
+            </a>
+            <a href="">
+              <img src="images/youtube.png" alt="">
+            </a>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- End Info Section-->
+<!-- end info_section -->
 
   <!-- footer section -->
   <section class="footer_section">
